--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -6,3 +6,8 @@
     <%= @activity.body %>
   </div>
 </div>
+
+
+
+
+<H1>FEATURE IDEA: show what other people are uploading for this same activity!</h1>
