preliminary mobile ui

--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -1,11 +1,8 @@
 <div data-id="{{id}}">
   <a href="/activities/{{id}}">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h2>{{title}}</h2>
-      </div>
-    </div>
+        <h3 id="act_title">{{title}}</h3>
   </a>
+  <hr>
 </div>
 
 
