--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -99,6 +99,40 @@ h1 {
 .item.w2 { width: 50%; }
 
 
+#act_title {
+    color: black;
+    font-weight: lighter;
+}
 
+#act_title:hover {
+    text-decoration: none;
+}
+
+
+#activity_title {
+    border: 1px solid black;
+
+}
+
+
+#foot_button {
+    position: absolute;
+   
+    clear: both;
+}    
+
+.container {
+    position: relative;
+}
+
+
+@media (max-width: 640px) {
+
+    .profile_img {
+        width: 90%;
+    }
+
+
+}
 
 
