--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,8 +1,22 @@
 <h2>Add an Activity</h2>
-<form id="add_activity">
-  Title<br>
-  <input id="activity_title" type="text" name="activity[title]"><br>
-  Body<br>
-  <textarea id="activity_body" name="activity[body]" rows="3" cols="60"></textarea><br>
-</form>
- <%= javascript_include_tag "activities"%>
+    <form id="add_activity">
+      <div>Categories:</div> <!-- checkboxes -->
+        <div>
+          <% @categories.each do |category| %>
+            <input id="<%= category.id %>" class="categoryCheckboxes" type="checkbox">
+            <label for="<%= category.id %>"><%= category.name %></label>
+          <% end %>
+        </div>
+      <div>Body</div>
+      <textarea id="activity_body" name="activity[body]" rows="3" cols="60"></textarea><br>
+      <div>Title</div>
+      <input id="activity_title" type="text" name="activity[title]"><br>
+    </form>
+    <h2>Activity List</h2>
+    <br>
+    <br>
+    <div id="activities">
+    </div>
+
+
+     <%= javascript_include_tag "activities"%>
