ios centered simplified

--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -1,6 +1,6 @@
 <div data-id="{{id}}">
   <a href="/activities/{{id}}">
-        <h3 id="act_title">{{title}}</h3>
+        <font size="34" id="act_title">{{title}}</font>
   </a>
   <hr>
 </div>
