--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,12 +1,14 @@
-<div class="container" id="">
+<div class="container" id="activity_index">
+  <div class="profile_partial">
     <%= render partial: "/profiles/show", profile: current_user.profile %>
+  </div>
+
+
 <!--     <canvas id="category_chart_canvas" width="600" height="400"></canvas>
     <h2>Add an Activity</h2> -->
 
-  <div id="profile_padding">
-  </div>
 
-  <div id="profile_secondary_data">
+<!--   <div id="profile_secondary_data">
     <% if current_user.profile.school %>
       <h4 class="profile_data"><%= current_user.profile.school%></h4>
     <% end %>
@@ -17,7 +19,7 @@
       <%= current_user.profile.state%> <a href="#edit" data-toggle="modal">Edit</a>
       </h4>
   </div>
-
+ -->
 
 
 
@@ -43,7 +45,7 @@
 
   <div id="add_act_button" class="panel panel-default footer">
     <div class="panel-body">
-      <center><a><h2><i class="glyphicon glyphicon-plus"></i></h2><a></center>
+      <center><font size="34"><a><h2><i class="glyphicon glyphicon-plus"></i></h2><a></font></center>
     </div>
   </div>
 
