--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,30 @@
-* {
-    border-radius: 0 !important;
+/*
+cross site element styles
+(buttons, form elements, etc)
+*/
+
+h1 {
+    font-weight: lighter;
+    font-size: 30px;
 }
+
+
+body {
+    background-color: rgb(239,244,255);
+    height:1000px;
+    width:100%;
+/*    background-color:#F0F0F0;*/
+}
+
+
+ul {
+    float: right;
+}
+li {
+    display: inline;
+    float: left;
+}
+
 .btn {
     border-radius: 0;
 }
@@ -10,9 +34,7 @@
 .jumbotron {
     border-radius: 0;
 }
-input {
-    width: 100%;
-}
+
 form {
     text-align: center;
 }
@@ -27,6 +49,22 @@ input {
     background-color: rgba(245, 245, 245, .1);
     border: 0;
 }
+
+input[type="text"]:focus {
+    border: 2px solid #999;
+    border-radius: 5px;
+}
+input[type="text"]:hover {
+    border: 2px solid #999;
+    border-radius: 5px;
+}
+
+input[type="password"]:focus {
+    border: 2px solid #999;
+    border-radius: 5px;
+}
+
+
 #signup_form {
     background-color: rgba(245, 245, 245, .1);
 }
@@ -38,38 +76,30 @@ input {
     font-size: 12px;
     max-height: 30px;
 }
-.student_pic {
-    padding-top: 10px;
-}
-.profile_text {
-    display: inline-block;
-    font-size: 100%;
-    word-wrap: break-word;
-}
-.profile_pic {
-    margin-right: 21px;
-    border-radius: 150px;
-}
-#profile {
-    max-height: 300px;
-}
-.profile_content {
-    padding-bottom: 300px;
-}
-h1 {
-    font-weight: lighter;
-}
+
 .item {
     width: 25%;
 }
 .item.w2 {
     width: 50%;
 }
-.remember_me {
-    width: 15px;
-    height: 15px;
-    display: block;
+
+.panel-default {
+    border-radius: 0;
+    border: 1 solid black;
+    color: black;
+    height: 65px;
 }
+.panel-default h2 {
+    font-weight: lighter;
+    margin-top: 1px;
+}
+
+
+/*
+HOME PAGE
+*/
+
 .sign_in_button {
     width: 75px;
     height: 30px;
@@ -110,6 +140,13 @@ h1 {
     display: block;
     float: left;
 }
+
+.remember_me {
+    width: 15px;
+    height: 15px;
+    display: block;
+}
+
 @media (max-width: 766px) {
     .log_in {
         width: 400px;
@@ -131,185 +168,56 @@ h1 {
         display: inline;
     }
 }
-input[type="text"]:focus {
-    border: 2px solid #999;
-    border-radius: 5px;
-}
-input[type="text"]:hover {
-    border: 2px solid #999;
-    border-radius: 5px;
+
+
+/*
+USER PROFILE PARTIAL
+with disappearing story and picture
+*/
+
+.profile_pic {
+/*    margin-right: 21px;*/
+    border-radius: 150px;
+    height: 200px;
+    width: 200px;
+/*    margin-left: 42%;*/
+    position: fixed;
+    margin-left: 24%;
 }
 
-.users_pic {
-    flex: 5;
-}
 .users_name {
     flex: 5;
-}
-
-.student_info {
-    width:;
-}
-.school_story h3 {
-    padding-left: 3px;
-    padding-top: 90px;
-}
-.users_name.thin h1 {
-    text-align: left;
-}
-.student.thin h1 {
-    margin-left: -160px;
-}
-input[type="password"]:focus {
-    border: 2px solid #999;
-    border-radius: 5px;
-}
-.profile {
-    text-align: left;
-}
-.user {
-    margin: 0 auto;
-    width: 45%;
-    margin-bottom: 90px;
-}
-h1 {
-    font-size: 30px;
-}
-body {
-    background-color: rgb(239,244,255);
-}
-ul {
-    float: right;
-}
-li {
-    display: inline;
-    float: left;
-}
-nav {
-    width: 960px;
-    margin: 0 auto;
-}
-.top_navbar {
-    width: 100%;
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-input[type="password"]:hover {
-    border: 2px solid #999;
-    border-radius: 5px;
-}
-section.stretch {
-    float: left;
-    height: 1500px;
-    width: 100%;
-}
-section.stretch p {
-    font-size: 20px;
-    color: #969696;
-    text-align: center;
-    position: relative;
-    margin-top: 250px;
-}
-section.stretch p.bottom {
-    top: 100%;
-}
-header {
-    background-color:rgb(181,179,224);
-    border-bottom: 1px solid #aaaaaa;
-    float: left;
-    width: 100%;
-    position: fixed;
-    z-index: 10;
-}
-header a {
-    color: #969696;
-    text-decoration: none;
-    font-family:'Amaranth', sans-serif;
-    text-transform: uppercase;
-    font-size: 1em;
-}
-header a.active, header a:hover {
-    color: #3d3d3d;
-}
-header li {
-    margin-right: 30px;
-}
-/* Sizes for the bigger menu */
- header.large {
-    height: 280px;
-    background-color: rgb(239,244,255);
-}
-header.large li {
-    margin-top: 45px;
-}
-header.large h1 {
-    font-size: 30px;
-    text-align: left;
-    font-weight: normal;
-}
-header.large h3 {
-    font-size: 26px;
-    font-weight: lighter;
-    background-color: rgb(239,244,255);
-}
-header.large .student_info {
-    padding-top: 35px;
-}
-header.small {
-    height: 70px;
-    background-color: rgb(239,244,255);
-}
-header.small img {
-    width: 50px;
-    height: 50px;
-}
-header.small li {
-    margin-top: 17px;
-}
-header.small h1 {
-    font-weight: lighter;
-    font-size: 30px;
+    color: white;
     text-align: center;
 }
-header, nav, a, img, li, h1 {
-    transition: all .7s;
-    -moz-transition: all .7s;
-    -webkit-transition: all .7s;
-}
-.main-content.largehead {
-    margin-top: 620px;
-}
-.main-content.smallhead {
-    margin-top: 320px;
-}
-.panel-default {
-    border-radius: 0;
-    border: 1 solid black;
-    color: black;
-    height: 65px;
-}
-.panel-default h2 {
-    font-weight: lighter;
-    margin-top: 1px;
-}
-.graphicals.smallhead {
 
+.state-icon {
+    left: -5px;
+}
+.list-group-item-primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(66, 139, 202);
 }
 
-#category_chart_canvas {
-    width: 100%;
+#header_nav {
+    width:100%;
+    height:370px;
+    background-color:#666;
+    position:fixed;
+    top:0;
+    left:0;
 }
 
-#category_chart_canvas {
-    width: 900px;
-}
 
-.hover {
-    background-color: blue;
-}
-.gone {
-    color: red;
-    display: none;
+
+
+/* ACTIVITIES INDEX
+*/
+
+
+.actual_content {
+/*    padding-top: 340px;*/
+    border: 1px solid black;
 }
 
 .graphs {
@@ -321,38 +229,14 @@ header, nav, a, img, li, h1 {
     margin-left: 24px;
 }
 
-.responsive_image {
-    width: 100%;
-}
 
-.school_story.off {
-    display: none !important;
-}
+/* ACTIVITIES SHOW
+*/
 
 .show_padding {
     height: 85px;
 }
 
-
-.users_name {
-    position: absolute;
+.responsive_image {
+    width: 100%;
 }
-
-.logout_button {
-    margin-left: 250px;
-    margin-top: -30px;
-}
-
-@media (max-width: 730px) {
-    .users_name {
-        display: none;
-    }
-}
-.state-icon {
-    left: -5px;
-}
-.list-group-item-primary {
-    color: rgb(255, 255, 255);
-    background-color: rgb(66, 139, 202);
-}
-
